--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,17 @@ edition = "2021"
 members = [
     "node",
     "pallets/template",
+    "pallets/template-protobuf",
     "runtime",
 ]
 resolver = "2"
 
 [workspace.dependencies]
+log = { version = "0.4.17", default-features = false }
+
 solochain-template-runtime = { path = "./runtime", default-features = false }
 pallet-template = { path = "./pallets/template", default-features = false }
+pallet-template-protobuf = { path = "./pallets/template-protobuf", default-features = false }
 clap = { version = "4.5.3" }
 frame-benchmarking-cli = { version = "42.0.0", default-features = false }
 frame-system = { version = "37.0.0", default-features = false }
@@ -46,6 +50,7 @@ sp-consensus-grandpa = { version = "21.0.0", default-features = false }
 sp-core = { version = "34.0.0", default-features = false }
 sp-inherents = { version = "34.0.0", default-features = false }
 sp-io = { version = "38.0.0", default-features = false }
+sp-std = { version = "13.0.0", default-features = false }
 sp-keyring = { version = "39.0.0", default-features = false }
 sp-runtime = { version = "39.0.0", default-features = false }
 sp-timestamp = { version = "34.0.0", default-features = false }
